--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -63,7 +63,7 @@
             android:text="@string/signin_facebook"
             android:textColor="@color/colorWhite" /> <!--페이스북으로 로그인-->
 
-        <android.widget.Button
+        <android.widget.Button android:id="@+id/google_sign_in_button"
             android:layout_width="match_parent"
             android:layout_height="40dp"
             android:layout_marginLeft="20dp"
